--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Hello World</h1>
+
+    <style>
+        body {
+            background-color: blue;
+            color: white;
+        }
+    </style>
 </body>
 </html>
